--- a/blogs.html
+++ b/blogs.html
@@ -32,7 +32,7 @@
       
   }
   .navbar a{
-      padding: 0px 2vw;
+      padding: 0px 2.5vw;
       text-decoration: none;
   }
   a:active,a:hover{
@@ -230,7 +230,7 @@ cursor: pointer;
   <header>
 
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <img class="logoimg" src="/assets/images/logo.png" alt="RCBU" style="height: 60px; width: 55px;  margin-right: 15vw;">
+      <img class="logoimg" src="/assets/images/logo.png" alt="RCBU" style="height: 60px; width: 55px;  margin-right: 22vw;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -242,8 +242,6 @@ cursor: pointer;
               <a href="/index.html" style="color:black; " onMouseOver="this.style.color='#EE4C3B'" onMouseOut="this.style.color='black'" >Home</a>
           </li>
           <li class="nav-item active">
-            <a href="/about.html" style="color:black" onMouseOver="this.style.color='#EE4C3B'" onMouseOut="this.style.color='black'">About Us</a>
-          </li><li class="nav-item active">
             <a href="/projects.html" style="color:black;" onMouseOver="this.style.color='#EE4C3B'" onMouseOut="this.style.color='black'" >Projects</a>
           </li><li class="nav-item active">
               <a href="/blogs.html" style="color:#EE4C3B; font-weight: bold;">Blogs</a>
@@ -275,11 +273,11 @@ cursor: pointer;
       <a href="/blog1.html"><img class="card-img-top" src="/assets/images/blog1.jpg" alt="Card image cap"></a>
       <div class="card-body">
         <h5 class="card-title">FOODILICIOUS FASHION SHOW</h5>
-        <p class="card-text">We have a real treat for you today! In just a few moments you will get a chance to see us displaying some of the hottest dishes from the world! This blog isn't all about looking good though. Today we will be taking you behind the scenes of your favourite food items. 
+        <p class="card-text">We have a real treat for you today! In just a few moments you will get a chance to see us displaying some of the hottest dishes from the world!
           </p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago<span style="float: right;"><a href="/blog1.html" >Read more ... </a></span></small>
+        <small class="text-muted"><span style="float: right;"><a href="/blog1.html" >Read more ... </a></span></small>
       </div>
     </div>
   </div>
