--- a/blog1.html
+++ b/blog1.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RCBU</title>
+    <title>Rotaract Club of Bombay Uptown</title>
+    <link rel="shortcut icon" type="image/png" href="/assets/images/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -32,7 +33,7 @@
       
   }
   .navbar a{
-      padding: 0px 2vw;
+      padding: 0px 2.5vw;
       text-decoration: none;
   }
   a:active,a:hover{
@@ -223,7 +224,7 @@ cursor: pointer;
   <header>
 
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <img class="logoimg" src="/assets/images/logo.png" alt="RCBU" style="height: 60px; width: 55px;  margin-right: 15vw;">
+      <img class="logoimg" src="/assets/images/logo.png" alt="RCBU" style="height: 60px; width: 55px;  margin-right: 22vw;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -235,8 +236,6 @@ cursor: pointer;
               <a href="/index.html" style="color:black; " onMouseOver="this.style.color='#EE4C3B'" onMouseOut="this.style.color='black'" >Home</a>
           </li>
           <li class="nav-item active">
-            <a href="/about.html" style="color:black" onMouseOver="this.style.color='#EE4C3B'" onMouseOut="this.style.color='black'">About Us</a>
-          </li><li class="nav-item active">
             <a href="/projects.html" style="color:black;" onMouseOver="this.style.color='#EE4C3B'" onMouseOut="this.style.color='black'" >Projects</a>
           </li><li class="nav-item active">
               <a href="/blogs.html" style="color:#EE4C3B; font-weight: bold;">Blogs</a>
