--- a/team.html
+++ b/team.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RCBU</title>
+    <title>Rotaract Club of Bombay Uptown</title>
+    <link rel="shortcut icon" type="image/png" href="/assets/images/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -296,7 +297,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/images/team">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/images/team/WhatsApp Image 2020-09-22 at 01.25.23.jpeg">
                         <h4>Manmeet Oberoi</h4>
                         <p class="text-muted"></p>
                     </div>
@@ -417,7 +418,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/images/team">
+                    <div class="team-member"><img class="rounded-circle mx-auto" src="assets/images/team/WhatsApp Image 2020-09-22 at 01.29.13.jpeg">
                         <h4>Ronit Palvia</h4>
                         <p class="text-muted">International Service Director</p>
                     </div>
