--- a/team.html
+++ b/team.html
@@ -331,7 +331,7 @@
                 <div class="col-sm-4">
                     <div class="team-member"><img class="rounded-circle mx-auto" src="assets/images/team/WhatsApp Image 2020-09-17 at 11.42.58.jpeg">
                         <h4>Krish Sukhani</h4>
-                        <p class="text-muted">Professional Development & <br> Entreprenneurship Development Director</p>
+                        <p class="text-muted">Professional Development & <br> Entrepreneurship Development Director</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
