--- a/team.html
+++ b/team.html
@@ -394,13 +394,13 @@
                 <div class="col-sm-4">
                     <div class="team-member"><img class="rounded-circle mx-auto" src="assets/images/team/WhatsApp Image 2020-09-16 at 22.20.32.jpeg">
                         <h4>Devanshi Savla</h4>
-                        <p class="text-muted">Editorial Director</p>
+                        <p class="text-muted">Editor</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member"><img class="rounded-circle mx-auto" src="assets/images/team/WhatsApp Image 2020-09-16 at 22.20.32 (1).jpeg">
                         <h4>Sakina Pachmariwala</h4>
-                        <p class="text-muted">Editorial & <br> Digital Communications Director</p>
+                        <p class="text-muted">Editor & <br> Digital Communications Director</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
