--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       color:white;
     }
     .navbar a{
-        padding: 0px 2.5vw;
+        padding: 0px 2vw;
         text-decoration: none;
     }
     a:active,a:hover{
@@ -279,7 +279,7 @@
             
 
             <nav class="navbar navbar-expand-lg navbar-light ">
-              <img class="logoimg" src="/assets/images/logo.png" alt="RCBU" style="height: 60px; width: 55px;  margin-right: 22vw;">
+              <img class="logoimg" src="/assets/images/logo.png" alt="RCBU" style="height: 60px; width: 55px;  margin-right: 15vw;">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -290,6 +290,9 @@
                   <li class="nav-item active">
                     <a href="/index.html" style="color:#EE4C3B; font-weight: bold;" >Home</a>
                   </li>
+                  <li class="nav-item active">
+                    <a href="#about" style="color:black;" onMouseOver="this.style.color='#EE4C3B'" onMouseOut="this.style.color='black'">About Us</a>
+                </li><li class="nav-item active">
                  <li class="nav-item active">
                       <a href="/projects.html" style="color:black;" onMouseOver="this.style.color='#EE4C3B'" onMouseOut="this.style.color='black'">Projects</a>
                   </li><li class="nav-item active">
@@ -337,14 +340,22 @@
           <img class="aboutpicstyle" src="/assets/images/aboutpic.jpg" alt=""></img>
         <p class="content">
           
-            We take Immense pride in introducing ourselves as the Rotaract Club Of Bombay Uptown One of the most active clubs in Rotaract District 3141. 
-            While we firmly act on our Motto, Dream | Believe | Achieve, we passionately support the belief of self service by service of others. 
-            At RCBU we create a vibrant and enthusiastic environment to ensure the personal growth of all our members. 
-            We are based in Mumbai, Wadala but we do activities all across city and other Rotaract Clubs throughout the world.
-
-            We take Immense pride in introducing ourselves as the Rotaract Club Of Bombay Uptown One of the most active clubs in Rotaract District 3141. 
-            While we firmly act on our Motto, Dream | Believe | Achieve, we passionately support the belief of self service by service of others. 
-            At RCBU we create a vibrant and enthusiastic environment to ensure the personal growth of all our members. 
+          Rotaract, which stands for <b>‘Rotary In Action’</b>, is the youth wing of the Rotary Organisation and
+          consists of young and enthusiastic individuals aged 16-31, as its members.
+          It is a service, leadership, professional and community service organization, which aims at carrying
+          out initiatives and projects under these aspects as well as avenues like Sports, Editorial, Digital
+          Communications and International Service. <br>
+          Today, Rotaract continues to experience phenomenal growth. There are currently more than 10.904
+          Rotaract clubs in more than 184 countries, with an estimated membership of more than 250,792
+          Rotaractors. As the program continues to grow, Rotaractors repeatedly show that they are prepared
+          for “Fellowship Through Service.”<br>
+          We take immense pride in introducing ourselves as the Rotaract Club of Bombay Uptown, one of the
+          most active &amp; vibrant club in Rotaract District 3141. We are a youth wing of the Rotary Club of
+          Bombay Uptown. And we will be moving into our 13th th year of existence. While we firmly act on our
+          Motto, <b>Dream | Believe | Achieve</b>, we passionately support the belief of self service by service of
+          others. At RCBU we create a vivacious and enthusiastic environment to ensure the personal growth
+          of all our members. We are based in Wadala, Mumbai but we do activities all across the city along
+          with other Rotaract Clubs globally.
             </p>
           </div>
         <br>
@@ -393,7 +404,8 @@
         <center><h1 style="font-size:45px; color:#EE4C3B">Our Projects</h1></center>
         <center>
             <p style="font-size: 20px;">
-                Every year we do a set of huge projects these are a few glimpses of our best Mega projects
+              Every year we do a set of projects wherein our members get benefitted and take something back.
+              Come and have a look!
             </p>
 
 
@@ -440,7 +452,7 @@
             </div>
           </div>
           <br>
-          <a href="/projects.html">
+          <a href="https://www.instagram.com/rcbombayuptown/">
           <button class="basic">
             View All
         </button>
